      on the Energy Network.
    - Only supports a maximum of 16 machines right now.
  The Circuit Fabricator now supports additional recipes than just the circuit items.
  Portal spawn time can now be configured.
  Added an advancement that is awarded when you activate an Energy Suspension Bridge
    with the maximum possible length.
CHANGED:
  Increased the chance to drop an Unidentified Ring when killing enemy mobs.
  The Dimensional Anchor is now registered as a Curios Charm, if you
    have the Curios mod installed.
  The Energized Power Core and Nullified Power Core are now crafted using the
    Circuit Fabricator from ADDSynth Energy.
  Changed Energy Storage Container's default maximum energy from 1,000,000 to 200,000.
    - This is mainly because I plan to add different types of batteries in the future.
FIXED:
  Fixed Unidentified Chainmail armor dropping as often as Gold armor.
  Optimized Lasers:
    - Doesn't use any TileEntities at all, so there should be much less lag.
    - Lasers stay in-world if you log out and get back in again.
    - Lasers beams continue moving even if the Laser is removed.
  Fixed Laser machines counting adjacent lasers even though they weren't attached
    or the proper laser type.
  Fixed de_de.json language files. Fixed "Lasers" and "Auto Shutoff" not being translated.
    See: https://github.com/ADDSynth/Overpowered-Forge-1.14/commit/5f4418eadb862447e4b58be2b637d0f230d717f4
  Fixed Energy Suspension Bridge maximum length was actually 1 less than what is set
    in the configuration.



v1.4.2 - June 15, 2022
NEW:
  Added an alternate crafting recipe for the Inverter.
  Added Project E EMC values to Silicon and the Circuit items.
  The drawn ItemStacks in the Portal Control Panel gui now cycle between all
    valid Gem Blocks that can be accepted in the Portal Frames, and also show
    an Item tooltip if you mouse over them, just like the drawn ItemStacks in
    the Circuit Fabricator gui.