@@ -150,4 +150,18 @@ public abstract class TileAlwaysOnMachine extends TileAbstractWorkMachine
     return inventory.getWorkingInventory();
   }
   
+  @Override
+  public final String getStatus(){
+    if(state == MachineState.IDLE){
+      return inventory.can_add_to_output() ? MachineState.IDLE.getStatus() : MachineState.OUTPUT_FULL.getStatus();
+    }
+    if(state == MachineState.RUNNING){
+      if(energy.hasEnergy()){
+        return energy.getDifference() != 0 ? MachineState.RUNNING.getStatus() : MachineState.NOT_RECEIVING_ENERGY.getStatus();
+      }
+      return MachineState.NO_ENERGY.getStatus();
+    }
+    return state.getStatus();
+  }
+  
 }
