@@ -87,7 +87,7 @@ public abstract class TileStandardWorkMachine extends TileSwitchableMachine
       powering_off();
       break;
 
-    case IDLE:
+    case IDLE: case OUTPUT_FULL:
       if(power_switch == false){
         turn_off();
       }
@@ -100,7 +100,7 @@ public abstract class TileStandardWorkMachine extends TileSwitchableMachine
       }
       break;
       
-    case RUNNING:
+    default: // Running
       if(energy.isFull()){
         perform_work();
         energy.setEmpty();
@@ -211,6 +211,20 @@ public abstract class TileStandardWorkMachine extends TileSwitchableMachine
   @Override
   public final CommonInventory getWorkingInventory(){
     return inventory.getWorkingInventory();
+  }
+  
+  @Override
+  public final String getStatus(){
+    if(state == MachineState.IDLE){
+      return inventory.can_add_to_output() ? MachineState.IDLE.getStatus() : MachineState.OUTPUT_FULL.getStatus();
+    }
+    if(state == MachineState.RUNNING){
+      if(energy.hasEnergy()){
+        return energy.getDifference() != 0 ? MachineState.RUNNING.getStatus() : MachineState.NOT_RECEIVING_ENERGY.getStatus();
+      }
+      return MachineState.NO_ENERGY.getStatus();
+    }
+    return super.getStatus();
   }
   
 }
