@@ -59,6 +59,9 @@
 "gui.addsynth_energy.machine_state.powering_off": "إيقاف التشغيل",
 "gui.addsynth_energy.machine_state.idle": "خامل",
 "gui.addsynth_energy.machine_state.running": "العمل",
+"gui.addsynth_energy.machine_state.output_full": "Output Full",
+"gui.addsynth_energy.machine_state.no_energy": "No Energy",
+"gui.addsynth_energy.machine_state.not_receiving_energy": "Not Receiving Energy",
 "gui.addsynth_energy.switch.on": "على",
 "gui.addsynth_energy.switch.off": "إيقاف",
 "gui.addsynth_energy.transfer_mode.bi_directional": "ثنائي الاتجاه",
