@@ -59,6 +59,9 @@
 "gui.addsynth_energy.machine_state.powering_off": "Vypnutí",
 "gui.addsynth_energy.machine_state.idle": "Líný",
 "gui.addsynth_energy.machine_state.running": "Pracovní",
+"gui.addsynth_energy.machine_state.output_full": "Output Full",
+"gui.addsynth_energy.machine_state.no_energy": "No Energy",
+"gui.addsynth_energy.machine_state.not_receiving_energy": "Not Receiving Energy",
 "gui.addsynth_energy.switch.on": "Na",
 "gui.addsynth_energy.switch.off": "Vypnuto",
 "gui.addsynth_energy.transfer_mode.bi_directional": "Obousměrný",
