@@ -59,6 +59,9 @@
 "gui.addsynth_energy.machine_state.powering_off": "Slukker",
 "gui.addsynth_energy.machine_state.idle": "Ledig",
 "gui.addsynth_energy.machine_state.running": "Arbejder",
+"gui.addsynth_energy.machine_state.output_full": "Output Full",
+"gui.addsynth_energy.machine_state.no_energy": "No Energy",
+"gui.addsynth_energy.machine_state.not_receiving_energy": "Not Receiving Energy",
 "gui.addsynth_energy.switch.on": "På",
 "gui.addsynth_energy.switch.off": "Af",
 "gui.addsynth_energy.transfer_mode.bi_directional": "Tovejs",
