@@ -59,6 +59,9 @@
 "gui.addsynth_energy.machine_state.powering_off": "Απενεργοποίηση",
 "gui.addsynth_energy.machine_state.idle": "Αδρανής",
 "gui.addsynth_energy.machine_state.running": "Εργαζόμενος",
+"gui.addsynth_energy.machine_state.output_full": "Output Full",
+"gui.addsynth_energy.machine_state.no_energy": "No Energy",
+"gui.addsynth_energy.machine_state.not_receiving_energy": "Not Receiving Energy",
 "gui.addsynth_energy.switch.on": "Επί",
 "gui.addsynth_energy.switch.off": "Μακριά από",
 "gui.addsynth_energy.transfer_mode.bi_directional": "Αμφίδρομος",
