@@ -59,6 +59,9 @@
 "gui.addsynth_energy.machine_state.powering_off": "خاموش کردن",
 "gui.addsynth_energy.machine_state.idle": "بیکار",
 "gui.addsynth_energy.machine_state.running": "کار کردن",
+"gui.addsynth_energy.machine_state.output_full": "Output Full",
+"gui.addsynth_energy.machine_state.no_energy": "No Energy",
+"gui.addsynth_energy.machine_state.not_receiving_energy": "Not Receiving Energy",
 "gui.addsynth_energy.switch.on": "بر",
 "gui.addsynth_energy.switch.off": "خاموش",
 "gui.addsynth_energy.transfer_mode.bi_directional": "دو جهته",
