@@ -59,6 +59,9 @@
 "gui.addsynth_energy.machine_state.powering_off": "Mise hors tension",
 "gui.addsynth_energy.machine_state.idle": "Tourner au ralenti",
 "gui.addsynth_energy.machine_state.running": "Travail",
+"gui.addsynth_energy.machine_state.output_full": "Output Full",
+"gui.addsynth_energy.machine_state.no_energy": "No Energy",
+"gui.addsynth_energy.machine_state.not_receiving_energy": "Not Receiving Energy",
 "gui.addsynth_energy.switch.on": "Sur",
 "gui.addsynth_energy.switch.off": "De",
 "gui.addsynth_energy.transfer_mode.bi_directional": "Bidirectionnel",
