@@ -59,6 +59,9 @@
 "gui.addsynth_energy.machine_state.powering_off": "बिजली बंद",
 "gui.addsynth_energy.machine_state.idle": "बेकार",
 "gui.addsynth_energy.machine_state.running": "काम कर रहे",
+"gui.addsynth_energy.machine_state.output_full": "Output Full",
+"gui.addsynth_energy.machine_state.no_energy": "No Energy",
+"gui.addsynth_energy.machine_state.not_receiving_energy": "Not Receiving Energy",
 "gui.addsynth_energy.switch.on": "पर",
 "gui.addsynth_energy.switch.off": "बंद",
 "gui.addsynth_energy.transfer_mode.bi_directional": "द्वि-दिशात्मक",
