@@ -59,6 +59,9 @@
 "gui.addsynth_energy.machine_state.powering_off": "Spegnimento",
 "gui.addsynth_energy.machine_state.idle": "Inattivo",
 "gui.addsynth_energy.machine_state.running": "Lavorando",
+"gui.addsynth_energy.machine_state.output_full": "Output Full",
+"gui.addsynth_energy.machine_state.no_energy": "No Energy",
+"gui.addsynth_energy.machine_state.not_receiving_energy": "Not Receiving Energy",
 "gui.addsynth_energy.switch.on": "Su",
 "gui.addsynth_energy.switch.off": "via",
 "gui.addsynth_energy.transfer_mode.bi_directional": "Bi-direzionale",
