@@ -59,6 +59,9 @@
 "gui.addsynth_energy.machine_state.powering_off": "電源を切る",
 "gui.addsynth_energy.machine_state.idle": "アイドル",
 "gui.addsynth_energy.machine_state.running": "ワーキング",
+"gui.addsynth_energy.machine_state.output_full": "Output Full",
+"gui.addsynth_energy.machine_state.no_energy": "No Energy",
+"gui.addsynth_energy.machine_state.not_receiving_energy": "Not Receiving Energy",
 "gui.addsynth_energy.switch.on": "オン",
 "gui.addsynth_energy.switch.off": "オフ",
 "gui.addsynth_energy.transfer_mode.bi_directional": "双方向",
