@@ -59,6 +59,9 @@
 "gui.addsynth_energy.machine_state.powering_off": "전원 끄기",
 "gui.addsynth_energy.machine_state.idle": "게으른",
 "gui.addsynth_energy.machine_state.running": "일",
+"gui.addsynth_energy.machine_state.output_full": "Output Full",
+"gui.addsynth_energy.machine_state.no_energy": "No Energy",
+"gui.addsynth_energy.machine_state.not_receiving_energy": "Not Receiving Energy",
 "gui.addsynth_energy.switch.on": "의 위에",
 "gui.addsynth_energy.switch.off": "떨어져서",
 "gui.addsynth_energy.transfer_mode.bi_directional": "양방향",
