@@ -59,6 +59,9 @@
 "gui.addsynth_energy.machine_state.powering_off": "Uitschakelen",
 "gui.addsynth_energy.machine_state.idle": "Inactief",
 "gui.addsynth_energy.machine_state.running": "Werken",
+"gui.addsynth_energy.machine_state.output_full": "Output Full",
+"gui.addsynth_energy.machine_state.no_energy": "No Energy",
+"gui.addsynth_energy.machine_state.not_receiving_energy": "Not Receiving Energy",
 "gui.addsynth_energy.switch.on": "Aan",
 "gui.addsynth_energy.switch.off": "Uit",
 "gui.addsynth_energy.transfer_mode.bi_directional": "Twee richtingen",
