@@ -59,6 +59,9 @@
 "gui.addsynth_energy.machine_state.powering_off": "oprind",
 "gui.addsynth_energy.machine_state.idle": "Inactiv",
 "gui.addsynth_energy.machine_state.running": "Lucru",
+"gui.addsynth_energy.machine_state.output_full": "Output Full",
+"gui.addsynth_energy.machine_state.no_energy": "No Energy",
+"gui.addsynth_energy.machine_state.not_receiving_energy": "Not Receiving Energy",
 "gui.addsynth_energy.switch.on": "Pe",
 "gui.addsynth_energy.switch.off": "de pe",
 "gui.addsynth_energy.transfer_mode.bi_directional": "Bi-direcțională",
