@@ -59,6 +59,9 @@
 "gui.addsynth_energy.machine_state.powering_off": "vypínanie",
 "gui.addsynth_energy.machine_state.idle": "nečinný",
 "gui.addsynth_energy.machine_state.running": "pracovný",
+"gui.addsynth_energy.machine_state.output_full": "Output Full",
+"gui.addsynth_energy.machine_state.no_energy": "No Energy",
+"gui.addsynth_energy.machine_state.not_receiving_energy": "Not Receiving Energy",
 "gui.addsynth_energy.switch.on": "na",
 "gui.addsynth_energy.switch.off": "preč",
 "gui.addsynth_energy.transfer_mode.bi_directional": "obojsmerný",
