@@ -59,6 +59,9 @@
 "gui.addsynth_energy.machine_state.powering_off": "avstängning",
 "gui.addsynth_energy.machine_state.idle": "På tomgång",
 "gui.addsynth_energy.machine_state.running": "Arbetssätt",
+"gui.addsynth_energy.machine_state.output_full": "Output Full",
+"gui.addsynth_energy.machine_state.no_energy": "No Energy",
+"gui.addsynth_energy.machine_state.not_receiving_energy": "Not Receiving Energy",
 "gui.addsynth_energy.switch.on": "På",
 "gui.addsynth_energy.switch.off": "Av",
 "gui.addsynth_energy.transfer_mode.bi_directional": "Tvåvägs",
