@@ -59,6 +59,9 @@
 "gui.addsynth_energy.machine_state.powering_off": "அணைக்கிறது",
 "gui.addsynth_energy.machine_state.idle": "செயலற்றது",
 "gui.addsynth_energy.machine_state.running": "வேலை",
+"gui.addsynth_energy.machine_state.output_full": "Output Full",
+"gui.addsynth_energy.machine_state.no_energy": "No Energy",
+"gui.addsynth_energy.machine_state.not_receiving_energy": "Not Receiving Energy",
 "gui.addsynth_energy.switch.on": "ஆன்",
 "gui.addsynth_energy.switch.off": "ஆஃப்",
 "gui.addsynth_energy.transfer_mode.bi_directional": "இரு திசை",
