@@ -59,6 +59,9 @@
 "gui.addsynth_energy.machine_state.powering_off": "Kapatılıyor",
 "gui.addsynth_energy.machine_state.idle": "Boşta",
 "gui.addsynth_energy.machine_state.running": "Çalışma",
+"gui.addsynth_energy.machine_state.output_full": "Output Full",
+"gui.addsynth_energy.machine_state.no_energy": "No Energy",
+"gui.addsynth_energy.machine_state.not_receiving_energy": "Not Receiving Energy",
 "gui.addsynth_energy.switch.on": "üzerinde",
 "gui.addsynth_energy.switch.off": "kapalı",
 "gui.addsynth_energy.transfer_mode.bi_directional": "İki Yön",
