@@ -59,6 +59,9 @@
 "gui.addsynth_energy.machine_state.powering_off": "Вимкнення живлення",
 "gui.addsynth_energy.machine_state.idle": "Холостий",
 "gui.addsynth_energy.machine_state.running": "Робочий",
+"gui.addsynth_energy.machine_state.output_full": "Output Full",
+"gui.addsynth_energy.machine_state.no_energy": "No Energy",
+"gui.addsynth_energy.machine_state.not_receiving_energy": "Not Receiving Energy",
 "gui.addsynth_energy.switch.on": "На",
 "gui.addsynth_energy.switch.off": "Вимкнено",
 "gui.addsynth_energy.transfer_mode.bi_directional": "Двонаправлений",
