@@ -59,6 +59,9 @@
 "gui.addsynth_energy.machine_state.powering_off": "Tắt nguồn",
 "gui.addsynth_energy.machine_state.idle": "Nhàn rỗi",
 "gui.addsynth_energy.machine_state.running": "Đang làm việc",
+"gui.addsynth_energy.machine_state.output_full": "Output Full",
+"gui.addsynth_energy.machine_state.no_energy": "No Energy",
+"gui.addsynth_energy.machine_state.not_receiving_energy": "Not Receiving Energy",
 "gui.addsynth_energy.switch.on": "Trên",
 "gui.addsynth_energy.switch.off": "Tắt",
 "gui.addsynth_energy.transfer_mode.bi_directional": "Hai hướng",
