@@ -59,6 +59,9 @@
 "gui.addsynth_energy.machine_state.powering_off": "關機",
 "gui.addsynth_energy.machine_state.idle": "閒",
 "gui.addsynth_energy.machine_state.running": "工作中",
+"gui.addsynth_energy.machine_state.output_full": "Output Full",
+"gui.addsynth_energy.machine_state.no_energy": "No Energy",
+"gui.addsynth_energy.machine_state.not_receiving_energy": "Not Receiving Energy",
 "gui.addsynth_energy.switch.on": "上",
 "gui.addsynth_energy.switch.off": "關",
 "gui.addsynth_energy.transfer_mode.bi_directional": "雙向",
